ambra/webapp/src/main/webapp/css/annotation.css
/* ... */
div.contentwrap p { margin:0; }

/*corrections varients*/
div#cmtContainer.retractionCssStyle h6 a,
div#cmtContainer.frmlcrctn h6 a,
div#cmtContainer.minrcrctn h6 a { background:url(../images/icon_correction.gif) left 0% no-repeat; color:#ff0000 !important }
div#cmtContainer.retractionCssStyle div.contentwrap,
div#cmtContainer.frmlcrctn div.contentwrap,
div#cmtContainer.retractionCssStyle h6#viewCmtTitle,
div#cmtContainer.frmlcrctn h6#viewCmtTitle,
div#cmtContainer.minrcrctn div.contentwrap,
div#cmtContainer.minrcrctn h6#viewCmtTitle,
div#cmtContainer.retractionCssStyle div#viewCmtDetail,
div#cmtContainer.frmlcrctn div#viewCmtDetail,
div#cmtContainer.retractionCssStyle div#viewComment,
div#cmtContainer.frmlcrctn div#viewComment,
div#cmtContainer.minrcrctn div#viewCmtDetail,
div#cmtContainer.minrcrctn div#viewComment,
div#cmtContainer.retractionCssStyle div#viewLink,
div#cmtContainer.frmlcrctn div#viewLink,
div#cmtContainer.minrcrctn div#viewLink { background-color:#fff4f0; }
div#cmtContainer.retractionCssStyle div#viewCmtDetail,
div#cmtContainer.frmlcrctn div#viewCmtDetail,
div#cmtContainer.minrcrctn div#viewCmtDetail { border-top-color:#f00; border-bottom-color:#f00; }

div.dialog .posting.pane{ background: none; }
div.comment div.comment{ margin: 10px 0; padding-left: 20px; border-left: 4px solid #999; background-color: #eee;}
div.comment .comment h6{ background: transparent; color: #333; padding: 4px 0 0 0; }

/* preview is applied to non-interactive dialogs */
.preview{ width: 32em; border: 3px solid #666; background: url(../images/dialog_preview_bg.gif) repeat-x top;}
.preview div.detail a { margin: 0 10px; }
/* annotate is applied to dialog viewers in the annotation process */
.annotate{ width:52em; border: 3px solid #666; background: #fff url(../images/forms_bg.gif) repeat-x bottom; position:relative;}

div.contextActionDialog { padding:0;margin:0; }
div.context div.tip { background:transparent url(../images/dialog_pb.gif) no-repeat 0px 0px; width:39px; height:22px; position:absolute; bottom: -22px; left:22px; }
div.context div.tipu { background:transparent url(../images/dialog_pt.gif) no-repeat 0px 0px; width:39px; height:22px; position:absolute; top: -22px; left:22px; }

div.context{ width:28em; border:3px solid #666; background:#fff url(../images/forms_bg.gif) repeat-x bottom; position:relative;}
div.context div.contextActionContent { border:0px; margin:10px; }
div.context div.contextActionContent h5 { padding:0px 0px 3px 0px; margin:0px;}
div.context div.contextActionContent ul { padding:5px 0px 0px 0px; margin:0px; list-style-type:dot;}
div.context div.contextActionContent li { padding:0px; margin:0px 0px 0px 17px; }
div.context div.contextActionContent input { padding:0px; margin:0px; float:right; }
div.context div.contextActionContent form { padding-top:5px; }
div.dijitTooltipContainer { border:0px; }

.loadingCycler { z-index: 99998 !important; }
.loadingCycler img { z-index: 99999 !important; }

/* comment wraps the contents of annotation blocks to apply padding */
.comment{ padding: 10px; }

.response fieldset { border:0; }
.response fieldset .reply{ display: block; margin: 10px 0; padding: 2px; border: 1px solid #ccc}
.posting .title{ width: 25em; }
.flag textarea,
.posting textarea{ width: 25em; height: 8em; overflow: auto; margin-bottom: 10px; margin-left: 0; margin-top: 5px;}
.response .body{ width: 46em; height: 12em; overflow: auto;}


.dojoTooltip {
	border: solid black 1px;
	background: beige;
	color: black;
	position: absolute;
	font-size: small;
	padding: 2px 2px 2px 2px;
	z-index: 10;
	display: block;
}

/* --- userinfo is for user information view --- */
.userinfo{ width: 16em; text-align: center; font-size: .9em; padding: 5px; border: 2px solid #333;  position: absolute;	z-index: 10; display: block; }
.userinfo dl,
.userinfo dd,
.userinfo dt{ margin: 0; list-style-type: none; font-size: 1em;}
.userinfo dd{ font-size: .9em; }

/* --- pane contains viewing area --- */
.pane			{ margin: 20px; padding: 0 5px;  margin:0; position: relative; }
.reading.pane 	{ height: 12em; }
.dialog fieldset{ border: 0; margin: 0; padding: 0;}
.dialog .text label,
.dialog legend,
.post legend	{ display: none; }
.pane .error	{ padding:5px; border:1px solid #c00; background-color: #fff; font-style: normal; }

.dialog .response { width: 100%; height: 8em; overflow: auto; }
.dialog .submit input { display: inline;}
.dialog .submit label { display: inline;}
.dialog fieldset div { width: 5em; height: 2em; margin-left: 15px;padding: 0; display: inline;}
.dialog fieldset div label 	{ width: 5em; vertical-align: middle; height: 1.125em; display: inline;}
.dialog fieldset input.radio 	{ width: 1em; vertical-align: middle; height: 1.125em; display: inline; margin-right: 4px;}
.dialog fieldset input.checkbox  { width: 1em; vertical-align: middle; height: 1.125em; display: inline; margin-right: 4px;}
div.btnwrap { width: 100%; display:block; margin: 0; height: auto; }
div.btnwrap input { margin: 5px auto; display: block; padding: 2px;}

/* --- multiple is the containing block for multiple annotations --- */

div.multiple		{ width: 50em; background-color: #666; position: relative;}
.multiple ol,
.multiple li	{ list-style-type: none; margin: 0; padding: 0; font-weight: normal;}
.multiple .detail	{ font-weight: normal; margin: 0 10px 10px 10px;}
.multiple ol	{ width: 22em; position: absolute; top: 30px; left: 0;margin: 0 10px 0 10px; border: 1px solid #666; border-width: 1px 0 0 1px; display: inline;}
.multiple li	{ list-style-position:outside; padding:5px; text-indent:20px; background:#c8c6c6 url(../images/tooltip_addannotation.gif) 5px 0.4em no-repeat; border-bottom: 1px solid #666; border-right: 1px solid #666; cursor: pointer;}
.multiple .contentwrap div.detail { border:0; background-color:#fff; margin:10px 0 12px; }
.multiple li div.detail	{ border: 1px solid #0bf; margin: 5px 0 0 0; text-indent:0; background-color: #DDD;}
/* ... */

